--- a/paper/CADE/paper.tex
+++ b/paper/CADE/paper.tex
@@ -144,7 +144,7 @@
 
 \setcounter{tocdepth}{1}
 
-\title{Towards a Verified Tableau Prover for an Unquantified Fragment of Set Theory}
+\title{Towards a Verified Tableau Prover for a Quantifier-Free Fragment of Set Theory}
 \titlerunning{Towards a Verified Tableau Prover for MLSS}
 \author{Lukas Stevens\orcidID{0000-0003-0222-6858}}
 \institute{Technical University of Munich, Boltzmannstr.\ 3, 85748 Garching, Germany
@@ -153,7 +153,7 @@
 \maketitle
 
 \begin{abstract}
-  Using Isabelle/HOL, we verify the state-of-the-art decision procedure for multi-level syllogistic with singleton (\MLSS{} for short), which is an unquantified fragment of set theory.
+  Using Isabelle/HOL, we verify the state-of-the-art decision procedure for multi-level syllogistic with singleton (\MLSS{} for short), which is a quantifier-free fragment of set theory.
   We formalise its syntax and semantics as well as a sound and complete tableau calculus for it.
   We also provide an abstract specification of a decision procedure that applies the rules of the calculus exhaustively and prove its termination.
   Furthermore, we extend the calculus with a light-weight type system that paves the way for an integration of the procedure into Isabelle/HOL.
@@ -161,21 +161,18 @@
 \end{abstract}
 
 \section{Introduction}
-In contrast to pen-and-paper proofs where we expect the reader to fill in trivial details, interactive theorem provers (ITPs) require us to justify each proof step rigorously;
-hence, ITPs usually offer a wide array of automated methods to deal with the proof goals that arise during interactive use.
-
 In Isabelle/HOL, there are specialised procedures for dealing with e.g.\ natural numbers, linear arithmetic, and metric spaces.
-Some of these procedures have been verified in Isabelle/HOL such as a procedure for Presburger arithmetic~\cite{presburger} that was later extended to mixed real-integer arithmetic~\cite{arithmetic}.
-This procedure, though, uses reflection to work on goals in Isabelle/HOL, which, during execution, either sacrifices speed by going through the simplifier or soundness by trusting generated code.
+Some of these procedures\todo{Related work?} have been verified in Isabelle/HOL such as a procedure for Presburger arithmetic~\cite{presburger} that was later extended to mixed real-integer arithmetic~\cite{arithmetic}.
+This procedure, though, uses reflection to work on goals in Isabelle/HOL, which, during execution, either sacrifices\todo{Formulation: no sacrifices but trust} speed by going through the simplifier or soundness by trusting the code generator.
 More recently, \citeauthor{orders}~\cite{orders} presented a verified decision procedure for orders that produces certificates. 
 This approach offers efficient execution by using generated code as well as soundness because the certificates are replayed through Isabelle's inference kernel.
 
 The focus of this paper is another ubiquitous structure in mathematics, namely sets.
 To the best of our knowledge, we present the first formally verified decision procedure for (a fragment of) set theory.
-In particular, we consider an unquantified fragment which \citeauthor{new_fast_tableau}~\cite{new_fast_tableau} call multi-level syllogistic with singleton (\MLSS{}).
+In particular, we consider a quantifier-free fragment which \citeauthor{new_fast_tableau}~\cite{new_fast_tableau} call multi-level syllogistic with singleton (\MLSS{}).
 The fragment includes the usual set operations of union, intersection, difference, membership, equality and, in addition, it allows the construction of singleton sets.
 
-Since \MLSS{} admits a tableau calculus, we expect that the generation of certificates will be straightforward.
+Since \MLSS{} admits a tableau calculus, we expect that the generation of certificates\todo{Formulation} will be straightforward.
 Like with the aforementioned order solver, this would pave the way towards an integration of the decision procedure into Isabelle, adding to its growing body of verified decision procedures.
 
 \subsection{Contributions}
@@ -258,7 +255,7 @@ datatype (vars: 'a) pset_atom =
 \end{lstlisting}
 With the above operators we can also represent the subset operator \lstinline!$\subseteqS$! and enumerate finite sets: \lstinline!s $\subseteqS$ t! is equivalent to \lstinline!s $\unionS$ t $\eqS$ t! and a finite set of elements \lstinline!{t$_\text{1}$,$\ldots$,t$_\text{k}$}! can be expressed by \lstinline!Single t$_1$ $\unionS$ $\ldots$ $\unionS$ Single t$_k$!.
 
-We use the propositional fragment of formulae due to \citeauthor{lqe}~\cite{lqe} with set atoms as propositional atoms to form the unquantified fragment \MLSS{} of set theory.
+We use the propositional fragment of formulae due to \citeauthor{lqe}~\cite{lqe} with set atoms as propositional atoms to form the quantifier-free fragment \MLSS{} of set theory.
 \begin{lstlisting}
 datatype (atoms: 'a) fm =
   &\fmAtom& 'a | &\fmNeg{('a fm)}& | &\fmAnd{'a fm}{'a fm}& | &\fmOr{'a fm}{'a fm}&
@@ -879,7 +876,7 @@ This is to guarantee that a set term \lstinline!t! is not an urelement \textbf{i
 Conversely, all terms \lstinline!s! with \lstinline!$\Gamma$ s $=$ 0! are urelements.
 
 \section{Conclusion and Future Work}
-By closely following a paper by \citeauthor{new_fast_tableau}~\cite{new_fast_tableau}, we developed a formalisation of a tableau calculus for an unquantified fragment of set theory called \MLSS{}.
+By closely following a paper by \citeauthor{new_fast_tableau}~\cite{new_fast_tableau}, we developed a formalisation of a tableau calculus for a quantifier-free fragment of set theory called \MLSS{}.
 The formalisation includes an abstract description of a decision procedure that builds on the calculus.
 To make the decision procedure compatible with Isabelle/HOL, we extended the calculus with a light-weight type system while maintaining completeness.
 
