--- a/paper/CADE/sources.bib
+++ b/paper/CADE/sources.bib
@@ -13,18 +13,18 @@
   and Villadsen, J{\o}rgen",
   editor="Peltier, Nicolas
   and Sofronie-Stokkermans, Viorica",
-  title="Formalizing a Seligman-Style Tableau System for Hybrid Logic",
+  title="Formalizing a {Seligman}-Style Tableau System for Hybrid Logic",
   booktitle="Automated Reasoning",
   year="2020",
   publisher="Springer International Publishing",
   address="Cham",
   pages="474--481",
-  isbn="978-3-030-51074-9"
+  doi="10.1007/978-3-030-51074-9_27"
 }
 
 @article{hybrid_logic_afp,
   author  = {Asta Halkjær From},
-  title   = {Formalizing a Seligman-Style Tableau System for Hybrid Logic},
+  title   = {Formalizing a {Seligman}-Style Tableau System for Hybrid Logic},
   journal = {Archive of Formal Proofs},
   month   = {December},
   year    = {2019},
@@ -35,7 +35,7 @@
 
 @inproceedings{hybrid_logic_workshop,
   author  = {Asta Halkjær From},
-  title   = {Formalizing a Seligman-Style Tableau System for Hybrid Logic},
+  title   = {Formalizing a {Seligman}-Style Tableau System for Hybrid Logic},
   booktitle = {Isabelle Workshop},
   year = {2022},
   url = {https://files.sketis.net/Isabelle_Workshop_2022/Isabelle_2022_paper_13.pdf}
@@ -60,8 +60,6 @@
 
 @article{tableau_quantifier_free,
   title={A Tableau Calculus for Quantifier-Free Set Theoretic Formulae},
-  ISBN={9783540697787},
-  ISSN={0302-9743},
   DOI={10.1007/3-540-69778-0_16},
   journal={Automated Reasoning with Analytic Tableaux and Related Methods},
   publisher={Springer},
@@ -93,7 +91,7 @@
 
 @article{zfc_in_hol1,
   author = {Mirna Džamonja and Angeliki Koutsoukou-Argyraki and Lawrence C. Paulson},
-  title = {Formalizing Ordinal Partition Relations Using Isabelle/HOL},
+  title = {Formalizing Ordinal Partition Relations Using {Isabelle/HOL}},
   journal = {Experimental Mathematics},
   volume = {31},
   number = {2},
@@ -134,6 +132,7 @@
   year=2008,
   publisher={{Springer}},
   pages="18--33",
+  doi="10.1007/978-3-540-71070-7_3"
 } 
 
 @book{tableau,
@@ -143,7 +142,6 @@
   year="1996",
   publisher="Springer New York",
   address="New York, NY",
-  isbn="978-1-4612-2360-3",
   doi="10.1007/978-1-4612-2360-3_3",
 }
 
@@ -181,12 +179,12 @@
   and Nipkow, Tobias",
   editor="Hou, Zhe
   and Ganesh, Vijay",
-  title="A Verified Decision Procedure for Orders in Isabelle/HOL",
+  title="A Verified Decision Procedure for Orders in {Isabelle/HOL}",
   booktitle="Automated Technology for Verification and Analysis",
   year="2021",
   publisher="Springer International Publishing",
   pages="127--143",
-  isbn="978-3-030-88885-5"
+  doi="10.1007/978-3-030-88885-5_9"
 }
 
 @book{set_theory,
@@ -197,8 +195,7 @@
   series    = {Monographs in Computer Science},
   publisher = {Springer},
   year      = {2001},
-  doi       = {10.1007/978-1-4757-3452-2},
-  isbn      = {978-1-4419-2905-1},
+  doi       = {10.1007/978-1-4757-3452-2}
 }
 
 @inproceedings{mlss_cartesian_map,
@@ -249,7 +246,7 @@ booktitle="Automated Reasoning with Analytic Tableaux and Related Methods",
 year="1997",
 publisher="Springer",
 pages="122--137",
-isbn="978-3-540-69046-7"
+doi="10.1007/BFb0027409"
 }
 
 @article{mlss_monotone_functions,
@@ -260,7 +257,6 @@ number = {1},
 pages = {49-60},
 year = {2003},
 note = {International Workshop on First-Order Theorem Proving},
-issn = {1571-0661},
 doi = {10.1016/S1571-0661(04)80652-2},
 author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
 }
@@ -285,7 +281,7 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   editor    = {Pietro Baroni and
                Christoph Benzm{\"{u}}ller and
                Y{\`{\i}} N. W{\'{a}}ng},
-  title     = {A Henkin-Style Completeness Proof for the Modal Logic {S5}},
+  title     = {A {Henkin}-Style Completeness Proof for the Modal Logic {S5}},
   booktitle = {Logic and Argumentation - 4th International Conference},
   series    = {Lecture Notes in Computer Science},
   volume    = {13040},
@@ -337,7 +333,6 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   publisher="Springer International Publishing",
   address="Cham",
   pages="231--245",
-  isbn="978-3-319-21401-6",
   doi="10.1007/978-3-319-21401-6_15"
 }
 
@@ -360,7 +355,7 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
                J{\o}rgen Villadsen},
   editor    = {Stefania Monica and
                Federico Bergenti},
-  title     = {A Sequent Calculus for First-Order Logic Formalized in Isabelle/HOL},
+  title     = {A Sequent Calculus for First-Order Logic Formalized in {Isabelle/HOL}},
   booktitle = {Proceedings of the 36th Italian Conference on Computational Logic},
   series    = {{CEUR} Workshop Proceedings},
   volume    = {3002},
@@ -379,7 +374,6 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   year="2014",
   publisher="Springer International Publishing",
   pages="226--241",
-  isbn="978-3-319-08970-6",
   doi = "10.1007/978-3-319-08970-6_15"
 }
 
@@ -403,4 +397,12 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   note    = {\url{https://isa-afp.org/entries/FOL-Fitting.html},
             Formal proof development},
   ISSN    = {2150-914x},
+}
+
+@online{formalisation,
+  author = {Lukas Stevens},
+  title = {Formalisation of a Decision Procedure for {MLSS}},
+  year = {2023},
+  url = {https://github.com/lukasstevens/set-decision-procedure/tree/CADE},
+  note = {{Formal} proof development}
 }
